src/test/ui/feature-gates/feature-gate-thread_local.stderr
error[E0658]: `#[thread_local]` is an experimental feature, and does not currently handle destructors
  --> $DIR/feature-gate-thread_local.rs:8:1
   |
LL | #[thread_local]
   | ^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29594
   = help: add #![feature(thread_local)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
